--- a/Resources/Private/Translations/de/NodeTypes/Content/CookieSettings.xlf
+++ b/Resources/Private/Translations/de/NodeTypes/Content/CookieSettings.xlf
@@ -68,15 +68,21 @@
         <target state="final">TTL (Speicherdauer der Entscheidung in Sekunden)</target>
       </trans-unit>
       <trans-unit id="properties.decisionTtl.ui.help.message">
-        <source>Number of seconds until cookie settings are displayed and confirmed again. Example values are: 86400 (1 day), 604800 (1 week), 2592000 (30 days), 31536000 (1 year)</source>
-        <target state="final">Anzahl der Sekunden, bis die Cookie-Einstellungen erneut angezeigt und bestätigt werden. Beispielwerte sind: 86400 (1 Tag), 604800 (1 Woche), 2592000 (30 Tage), 31536000 (1 Jahr)</target>
+        <source>Number of seconds until cookie settings are displayed and confirmed again. Example values are: 86400 (1
+          day), 604800 (1 week), 2592000 (30 days), 31536000 (1 year)
+        </source>
+        <target state="final">Anzahl der Sekunden, bis die Cookie-Einstellungen erneut angezeigt und bestätigt werden.
+          Beispielwerte sind: 86400 (1 Tag), 604800 (1 Woche), 2592000 (30 Tage), 31536000 (1 Jahr)
+        </target>
       </trans-unit>
       <trans-unit id="properties.closeButtonEnabled">
         <source>Show close-button</source>
         <target state="final">Zeige X (zum schließen)</target>
       </trans-unit>
       <trans-unit id="properties.closeButtonEnabled.ui.help.message">
-        <source>Zeigt ein "X" in der oberen rechten Ecke, falls aktiviert. Ein klick auf dieses X schließt den Banner ohne Entscheidung. Er erscheint beim nächsten Seitenaufruf erneut.</source>
+        <source>Zeigt ein "X" in der oberen rechten Ecke, falls aktiviert. Ein klick auf dieses X schließt den Banner
+          ohne Entscheidung. Er erscheint beim nächsten Seitenaufruf erneut.
+        </source>
       </trans-unit>
       <trans-unit id="properties.excludedDocuments">
         <source>Exclude for Documents</source>
