--- a/Resources/Private/Translations/en/NodeTypes/Content/Cookie/Attribute.xlf
+++ b/Resources/Private/Translations/en/NodeTypes/Content/Cookie/Attribute.xlf
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-	<file original="" product-name="KaufmannDigital.GDPR.CookieConsent" source-language="en" datatype="plaintext">
-		<body>
-			<trans-unit id="ui.label" xml:space="preserve">
-				<source>Cookie Attribute</source>
-			</trans-unit>
-			<trans-unit id="properties.label.ui.inline.editorOptions.placeholder" xml:space="preserve">
-				<source>Insert label...</source>
-			</trans-unit>
-			<trans-unit id="properties.value.ui.inline.editorOptions.placeholder" xml:space="preserve">
-				<source>Insert value...</source>
-			</trans-unit>
-		</body>
-	</file>
+  <file original="" product-name="KaufmannDigital.GDPR.CookieConsent" source-language="en" datatype="plaintext">
+    <body>
+      <trans-unit id="ui.label">
+        <source>Cookie Attribute</source>
+      </trans-unit>
+      <trans-unit id="properties.label.ui.inline.editorOptions.placeholder">
+        <source>Insert label...</source>
+      </trans-unit>
+      <trans-unit id="properties.value.ui.inline.editorOptions.placeholder">
+        <source>Insert value...</source>
+      </trans-unit>
+    </body>
+  </file>
 </xliff>
